--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ function renderAll(){
 function monthWise() {
   const map = {};
 
-  // Aggregate month-wise data
+  // Aggregate month-wise credit & debit
   filteredData.forEach(r => {
     const d = parseDate(getValue(r, "date"));
     const key = d.getMonth() + "-" + d.getFullYear();
@@ -692,7 +692,7 @@ function monthWise() {
   const labels = [];
   const savingValues = [];
 
-  // Build rows
+  // Build table rows
   Object.values(map)
     .sort((a, b) => a.date - b.date)
     .forEach(v => {
@@ -738,32 +738,101 @@ function monthWise() {
       `;
     });
 
-  // Destroy old chart
+  // Destroy previous chart
   if (monthChart) monthChart.destroy();
 
-  // Draw chart
-  monthChart = new Chart(document.getElementById("monthChart"), {
-    type: "line",
-    data: {
-      labels: labels,
-      datasets: [{
-        label: "Net Saving",
-        data: savingValues,
-        borderWidth: 3,
-        tension: 0.35,
-        borderColor: "#2563eb",
-        pointBackgroundColor: "#2563eb",
-        fill: false
-      }]
+  // Month-wise Savings Chart (NO SHADING, GREEN LABELS)
+monthChart = new Chart(document.getElementById("monthChart"), {
+  type: "line",
+  data: {
+    labels,
+    datasets: [{
+      label: "Net Saving",
+      data: savingValues,
+      borderWidth: 3,
+      tension: 0.35,
+      fill: false,
+
+      pointRadius: 6,
+      pointHoverRadius: 9,
+      pointBorderWidth: 3,
+
+      // Point styling
+      pointBackgroundColor: ctx =>
+        ctx.raw > 0 ? "#22c55e" : "#fb923c",
+
+      pointBorderColor: "#ffffff",
+
+      // Line color per segment
+      segment: {
+        borderColor: ctx =>
+          ctx.p1.parsed.y >= 0 ? "#22c55e" : "#fb923c"
+      }
+    }]
+  },
+
+  options: {
+    responsive: true,
+    maintainAspectRatio: false,
+
+    plugins: {
+      legend: {
+        display: true,
+        position: "top",
+        labels: {
+          boxWidth: 18,
+          boxHeight: 8,
+          generateLabels: () => ([
+            { text: "Surplus (Saving)", strokeStyle: "#22c55e", lineWidth: 3 },
+            { text: "Deficit (Overspend)", strokeStyle: "#fb923c", lineWidth: 3 }
+          ])
+        }
+      },
+
+      tooltip: {
+        backgroundColor: "#111827",
+        titleColor: "#fff",
+        bodyColor: "#e5e7eb",
+        cornerRadius: 8,
+        padding: 12,
+        callbacks: {
+          label: ctx =>
+            (ctx.raw >= 0 ? "Saved: ₹" : "Overspent: ₹") +
+            formatNumber(Math.abs(ctx.raw))
+        }
+      }
     },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false
+
+    scales: {
+      x: {
+        grid: {
+          display: false
+        },
+        ticks: {
+          color: "#6b7280",
+          font: { size: 11 }
+        }
+      },
+
+      y: {
+        ticks: {
+          callback: v => "₹" + formatNumber(v),
+          color: "#6b7280",
+          font: { size: 11 }
+        },
+        grid: {
+          color: ctx =>
+            ctx.tick.value === 0
+              ? "rgba(0,0,0,0.25)"
+              : "rgba(0,0,0,0.05)",
+          borderDash: ctx =>
+            ctx.tick.value === 0 ? [6, 6] : []
+        }
+      }
     }
-  });
+  }
+});
 }
-
-
 
 
 /* --- Weekly chart --- */
