--- a/index.html
+++ b/index.html
@@ -532,11 +532,49 @@ header,
   box-shadow: 0 10px 24px rgba(16,185,129,0.25);
 }
 /* Highlight rows with no credit & no debit */
+/* Attractive highlight for missing credit & debit */
 .missing-amount {
-  background: #fff7ed;
+  background: linear-gradient(
+    90deg,
+    #fff7ed 0%,
+    #ffedd5 100%
+  );
   color: #9a3412;
   font-weight: 700;
-  border-left: 4px solid #fb923c;
+
+  border-left: 6px solid #fb923c;
+  border-radius: 8px;
+
+  padding: 10px 12px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  box-shadow: inset 0 0 0 1px rgba(251,146,60,0.25);
+}
+
+/* Warning icon badge */
+.missing-amount::before {
+  content: "⚠️";
+  font-size: 16px;
+}
+
+/* Smooth hover effect */
+tr:hover .missing-amount {
+  background: linear-gradient(
+    90deg,
+    #ffedd5 0%,
+    #fed7aa 100%
+  );
+  transform: translateX(3px);
+  transition: all 0.25s ease;
+}
+tr:has(.missing-amount) {
+  background: #fffaf0;
+}
+
+tr:has(.missing-amount):hover {
+  background: #fff3e0;
 }
 
 </style>
