--- a/index.html
+++ b/index.html
@@ -587,16 +587,34 @@ tr:has(.missing-amount):hover {
 <header>
   <div>📊 Expense & Savings Dashboard</div>
 
-  <div style="position:relative;">
-    <input 
-      type="text" 
-      id="searchBar"
-      class="search-input"
-      placeholder="Search merchants..."
-      oninput="debouncedMerchantSearch()"
-    >
-    <span class="search-icon">🔍</span>
-  </div>
+ <div style="position:relative;">
+  <input 
+    type="text" 
+    id="searchBar"
+    class="search-input"
+    placeholder="Search merchants..."
+    oninput="debouncedMerchantSearch()"
+  >
+
+  <!-- ❌ Clear search -->
+  <span 
+    id="clearSearch"
+    onclick="clearSearch()"
+    style="
+      position:absolute;
+      right:42px;
+      top:50%;
+      transform:translateY(-50%);
+      font-size:18px;
+      cursor:pointer;
+      color:#9ca3af;
+      display:none;
+    "
+  >✖</span>
+
+  <span class="search-icon">🔍</span>
+</div>
+
 </header>
 
 <div class="container">
@@ -681,6 +699,17 @@ tr:has(.missing-amount):hover {
   </div>
 
   <table id="merchantTable"></table>
+  <div 
+  id="noSearchResult"
+  style="
+    display:none;
+    text-align:center;
+    padding:24px;
+    color:#6b7280;
+    font-weight:600;
+  "
+>
+  ❌ No matching transactions found
 </div>
 
 </div>
@@ -728,8 +757,14 @@ function debouncedMerchantSearch(){
 function merchantSearch(){
   const q = document.getElementById("searchBar").value.toLowerCase();
   const rows = merchantTable.getElementsByTagName("tr");
+  const clearBtn = document.getElementById("clearSearch");
 
-  for(let i=1; i < rows.length; i++){
+  // show / hide ❌ button
+  clearBtn.style.display = q ? "block" : "none";
+
+  let visibleCount = 0;
+
+  for(let i = 1; i < rows.length; i++){
     const merchantCell = rows[i].getElementsByTagName("td")[1];
 
     const originalText =
@@ -743,20 +778,23 @@ function merchantSearch(){
 
     if(name.includes(q)){
       rows[i].style.display = "";
+      visibleCount++;
 
-      if(q.trim() !== ""){
+      if(q.trim()){
         const regex = new RegExp(`(${q})`, "ig");
         merchantCell.innerHTML = originalText.replace(regex, `<mark>$1</mark>`);
       } else {
         merchantCell.innerHTML = originalText;
       }
-
     } else {
       rows[i].style.display = "none";
       merchantCell.innerHTML = originalText;
     }
   }
+
+  showNoSearchResult(visibleCount);
 }
+
 function showTableShimmer(rows = 6) {
   let html = `
     <tr>
@@ -1071,6 +1109,17 @@ function renderAll(){
   setTimeout(weeklyWise, 60);
   setTimeout(merchantWise, 100);
   setTimeout(generateAIInsight, 140);
+}
+function clearSearch() {
+  const input = document.getElementById("searchBar");
+  input.value = "";
+  merchantSearch();
+  document.getElementById("clearSearch").style.display = "none";
+}
+
+function showNoSearchResult(count) {
+  const box = document.getElementById("noSearchResult");
+  box.style.display = count === 0 ? "block" : "none";
 }
 
 /* --- Month-wise --- */
