--- a/index.html
+++ b/index.html
@@ -597,20 +597,24 @@ tr:has(.missing-amount):hover {
   >
 
   <!-- ❌ Clear search -->
-  <span 
-    id="clearSearch"
-    onclick="clearSearch()"
-    style="
-      position:absolute;
-      right:42px;
-      top:50%;
-      transform:translateY(-50%);
-      font-size:18px;
-      cursor:pointer;
-      color:#9ca3af;
-      display:none;
-    "
-  >✖</span>
+ <span 
+  id="clearSearch"
+  onclick="clearSearch()"
+  style="
+    position:absolute;
+    right:42px;
+    top:50%;
+    transform:translateY(-50%);
+    font-size:18px;
+    cursor:pointer;
+    color:#dc2626;           /* RED */
+    display:none;
+    transition:0.2s;
+  "
+  onmouseover="this.style.color='#b91c1c'"
+  onmouseout="this.style.color='#dc2626'"
+ >✖</span>
+
 
   <span class="search-icon">🔍</span>
 </div>
