--- a/index.html
+++ b/index.html
@@ -576,7 +576,28 @@ tr:has(.missing-amount) {
 tr:has(.missing-amount):hover {
   background: #fff3e0;
 }
+#totals-bar {
+  display: flex;
+  gap: 18px;
+  margin-bottom: 18px;
+}
 
+.total-box {
+  padding: 10px 18px;
+  border-radius: 12px;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.sells {
+  background: #ecfdf5;
+  color: #047857;
+}
+
+.expense {
+  background: #fef2f2;
+  color: #b91c1c;
+}
 </style>
 </head>
 <body>
@@ -701,6 +722,15 @@ tr:has(.missing-amount):hover {
        style="background:#fef3c7;padding:16px;border-radius:14px;margin-bottom:18px;
               border-left:6px solid #f59e0b;font-size:15px;display:none;">
   </div>
+  <div id="totals-bar" style="display:none">
+  <div class="total-box sells">
+    Total Sells: ₹<span id="totalSells">0</span>
+  </div>
+
+  <div class="total-box expense">
+    Total Expenditure: ₹<span id="totalExpense">0</span>
+  </div>
+ </div>
 
   <table id="merchantTable"></table>
   <div 
@@ -980,6 +1010,12 @@ function applyDateFilter() {
 
     /* ---------- RENDER TABLE ---------- */
     merchantWiseWithData(result);
+    // Show totals bar
+    document.getElementById("totals-bar").style.display = "flex";
+
+// Refresh totals for selected date
+calculateTotals();
+
 
     /* ---------- DATE-BASED AI INSIGHT ---------- */
     generateAIInsightFromData(
@@ -1010,6 +1046,9 @@ function resetDateFilter() {
   syncDatePickerLimits();
 
   showToast("🔄 Date filter reset — showing all transactions", "success");
+  // Hide totals bar on reset
+ document.getElementById("totals-bar").style.display = "none";
+
 }
 
  function applyFilter(){
@@ -1518,14 +1557,17 @@ function merchantWise(){
         ${r.credit>0 ? "₹" + formatNumber(r.credit) : "-"}
       </td>
 
-      <td class="${r.debit>0 ? "debit-cell" : ""}">
-        ${r.debit>0 ? "₹" + formatNumber(r.debit) : "-"}
-      </td>
+    <td class="${r.debit>0 ? "debit-cell" : ""}">
+    ${r.debit>0 ? "₹" + formatNumber(r.debit) : "-"}
+    </td>
+
+
     </tr>`;
  });
 
 
   merchantTable.innerHTML = html;
+  calculateTotals();
 }
 function merchantWiseWithData(data) {
   const rows = [];
@@ -1655,6 +1697,38 @@ function generateAIInsight(){
 
   box.style.display = "block";
 }
+function calculateTotals() {
+  let sells = 0;
+  let expense = 0;
+
+  document.querySelectorAll("#merchantTable tr").forEach((row, index) => {
+    if (index === 0) return;
+
+    const creditCell = row.children[2];
+    const debitCell  = row.children[3];
+
+    if (creditCell && creditCell.innerText.trim() !== "-") {
+      sells += parseFloat(
+        creditCell.innerText.replace("₹", "").replace(/,/g, "").trim()
+      );
+    }
+
+    if (debitCell && debitCell.innerText.trim() !== "-") {
+      expense += parseFloat(
+        debitCell.innerText.replace("₹", "").replace(/,/g, "").trim()
+      );
+    }
+  });
+
+  document.getElementById("totalSells").innerText =
+    sells.toLocaleString("en-IN", { minimumFractionDigits: 2 });
+
+  document.getElementById("totalExpense").innerText =
+    expense.toLocaleString("en-IN", { minimumFractionDigits: 2 });
+}
+
+
+
 function generateAIInsightFromData(data, label) {
   const box = document.getElementById("aiInsight");
   box.style.display = "none";
