--- a/index.html
+++ b/index.html
@@ -598,6 +598,59 @@ tr:has(.missing-amount):hover {
   background: #fef2f2;
   color: #b91c1c;
 }
+#resetFilterBtn {
+  padding: 14px 26px;
+  font-size: 15px;
+  font-weight: 600;
+  color: #374151;
+  background: #e5e7eb;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+  transition: 0.25s ease;
+}
+
+#resetFilterBtn:hover {
+  background: #d1d5db;
+  transform: translateY(-2px);
+}
+/* RESET FILTER BUTTON */
+#resetFilterBtn {
+  padding: 14px 26px;
+  font-size: 15px;
+  font-weight: 600;
+
+  border-radius: 18px;
+  border: none;
+  cursor: pointer;
+
+  background: linear-gradient(135deg, #e5e7eb, #d1d5db);
+  color: #6b7280;
+
+  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+  transition: all 0.25s ease;
+}
+
+/* Enabled state */
+#resetFilterBtn:not(:disabled) {
+  background: linear-gradient(135deg, #4f46e5, #6366f1);
+  color: #ffffff;
+  box-shadow: 0 12px 28px rgba(79,70,229,0.45);
+}
+
+/* Hover only when enabled */
+#resetFilterBtn:not(:disabled):hover {
+  transform: translateY(-3px) scale(1.03);
+  box-shadow: 0 18px 38px rgba(79,70,229,0.55);
+}
+
+/* Disabled state */
+#resetFilterBtn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+
 </style>
 </head>
 <body>
@@ -665,7 +718,14 @@ tr:has(.missing-amount):hover {
 
   <select id="yearFilter"><option value="">All Years</option></select>
   <select id="monthFilter"><option value="">All Months</option></select>
-  <button onclick="applyFilter()">Apply Filter</button>
+  <button 
+  id="resetFilterBtn" 
+  onclick="resetFilters()" 
+  disabled
+ >
+  Reset Filter
+</button>
+
 </div>
 
 <!-- ---------------- SUMMARY CARDS ---------------- -->
@@ -756,6 +816,47 @@ tr:has(.missing-amount):hover {
 <script>
 
 let rawData = [], filteredData = [], monthChart, weeklyChart;
+
+/* ================= AUTO FILTER SETUP ================= */
+
+// Disable month until year is selected
+monthFilter.disabled = true;
+
+// Auto apply filter when year/month changes
+yearFilter.addEventListener("change", autoApplyFilter);
+monthFilter.addEventListener("change", autoApplyFilter);
+
+function autoApplyFilter() {
+
+  // If year is cleared → DO NOTHING (wait for reset button)
+  if (!yearFilter.value) {
+    monthFilter.disabled = true;
+    return;
+  }
+
+  // Enable month when year selected
+  monthFilter.disabled = false;
+
+  // Apply filter only when both selected
+  if (yearFilter.value && monthFilter.value !== "") {
+    applyFilter();
+  }
+}
+
+function resetFilters() {
+  yearFilter.value = "";
+  monthFilter.value = "";
+  monthFilter.disabled = true;
+
+  filteredData = rawData;
+
+  renderAll();
+  initDatePicker();
+  syncDatePickerLimits();
+
+  showToast("🔄 Filters reset — showing all months", "success");
+}
+
 
 /* --- Helpers --- */
 function formatNumber(n){ return n.toLocaleString("en-IN",{ minimumFractionDigits: 2 }); }
@@ -902,6 +1003,7 @@ async function loadExcel(file){
     uploadStatus.innerHTML = `<span class="success">Loaded ${file.name}</span>`;
     filterLoader.classList.remove("show");
     showToast(`✅ ${file.name} uploaded successfully`, "success");
+    document.getElementById("resetFilterBtn").disabled = false;
   };
 
   reader.readAsArrayBuffer(file);
